--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bopers-app",
   "version": "0.1.0",
+  "proxy": "https://api-bopers.onrender.com/",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,6 +20,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   }
