--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,3 @@
 BACKEND_URL="https://api-bopers.onrender.com"
+RIOT_API_DATA_URL="https://ddragon.leagueoflegends.com/cdn/13.12.1/data/en_US"
+NEXT_PUBLIC_RIOT_API_IMG_URL="https://ddragon.leagueoflegends.com/cdn/img/champion/splash"
