--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.3",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
+    "@types/node": "20.3.3",
+    "autoprefixer": "10.4.14",
     "eslint-config-next": "13.4.7",
     "next": "13.4.7",
     "postcss": "8.4.24",
@@ -22,6 +20,9 @@
     "server-only": "^0.0.1",
     "sharp": "^0.32.3",
     "tailwindcss": "3.3.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
     "typescript": "5.1.6"
-  }
+  },
+  "devDependencies": {}
 }
